k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openstudybuilder
  labels:
    app.kubernetes.io/name: openstudybuilder
    app.kubernetes.io/part-of: openstudybuilder
